# vos-benchmark

./: LICENSE  README.md  benchmark.py  eval.sh  pyproject.toml  requirements.txt  setup.py  show.py
vos_benchmark/: benchmark.py  evaluator.py  utils.py
